Allow GitHub Pages to access backend API